<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<EditText
    android:hint="@string/et_enter_nickname"
    android:id="@+id/et_enter_nickname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/et_enter_password"
        android:id="@+id/et_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_register"
        android:layout_width="0dp"
            android:layout_weight="1"
        android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:background="@drawable/register"/>
        <Button
            android:id="@+id/btn_forgetPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_forgetPassword"
            android:background="@drawable/register"/>
        <Button
            android:id="@+id/btn_enter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_enter"
            android:background="@drawable/register"/>

    </LinearLayout>
</LinearLayout>