<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/et_email"
    android:hint="@string/et_register_email" />
    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_register_nickname"
        android:id="@+id/et_nickname" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_register_password" />
    <Button
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register_register"
        android:text="@string/btn_register_register"
        android:background="@drawable/register"
        android:elevation="0dp" />
</LinearLayout>