<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_slidingmenu_left"
    >
<LinearLayout
    android:id="@+id/line_lift_menu_news"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/biz_navigation_tab_news"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_lift_menu_news_chinese"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_lift_menu_news_english"
            />
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:id="@+id/line_lift_menu_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_read"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lift_menu_favorite_chinese"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lift_menu_favorite_english"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_lift_menu_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_local_news"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lift_menu_local_chinese"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lift_menu_local_english"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_lift_menu_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_ties"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lift_menu_comment_chinese"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lift_menu_comment_english"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_lift_menu_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/biz_navigation_tab_pics"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lift_menu_photo_chinese"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lift_menu_photo_english"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>