<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@drawable/longbutton_normal">
        <ImageView
            android:id="@+id/img_news_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"/>
        <TextView
android:text="@string/txt_news_message"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <LinearLayout
            android:id="@+id/Line_news_comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/txt_news_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_news_comment_count"/>
            <TextView
                android:text="@string/txt_news_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>
        <ImageView
            android:id="@+id/img_popupWindow"
                android:src="@drawable/news_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
<WebView
    android:id="@+id/web"
    android:layout_width="match_parent"
    android:layout_height="match_parent"></WebView>
</LinearLayout>