<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorBack">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/activity_user_top"
    android:background="@color/colorRed"
    >
    <ImageView
        android:src="@drawable/back"
        android:id="@+id/img_user_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
android:layout_gravity="center"
        />
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txt_user"/>
</LinearLayout>
    <LinearLayout
        android:background="@drawable/center_top_bg"
        android:layout_marginBottom="@dimen/activity_user_top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
<ImageView
    android:src="@drawable/biz_navigation_tab_ties"
    android:id="@+id/img_user_user"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"/>
        <LinearLayout
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

<TextView
android:layout_gravity="bottom"
    android:gravity="center_vertical"
    android:id="@+id/txt_user_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <LinearLayout


                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:text="@string/txt_user_integral"
                android:id="@+id/txt_user_integral"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
                <TextView
                    android:gravity="center_vertical"
                    android:id="@+id/txt_user_integral_count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorWhiteWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
android:text="@string/txt_user_comment"
                />
            <TextView
                android:id="@+id/txt_user_comment"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhiteWhite"
    >
<TextView
    android:text="@string/txt_user_log"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</LinearLayout>
        <ListView
            android:background="#fff"
            android:id="@+id/list_log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></ListView>
        <Button
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/longbutton_normal"
android:gravity="center"
            android:id="@+id/btn_user_exit"
            android:text="@string/btn_user_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_user_top" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
